@@ -278,6 +278,13 @@ public class FolderInternalFrame extends JInternalFrame implements FolderDisplay
 	e.printStackTrace();
     }
 
+  /**
+   * This formats a display message.
+   */
+  public String formatMessage(String message) {
+    return Pooka.getUIFactory().formatMessage(message);
+  }
+
     /**
      * This shows an Input window.  We include this so that the 
      * MessageProxy can call the method without caring about the actual
