@@ -433,6 +433,13 @@ public class PreviewContentPanel extends JPanel implements ContentPanel, Message
     showError(errorMessage + e.getMessage(), title);
     e.printStackTrace();
   }
+
+  /**
+   * This formats a display message.
+   */
+  public String formatMessage(String message) {
+    return Pooka.getUIFactory().formatMessage(message);
+  }
   
   /**
    * This shows an Input window.  We include this so that the 
